# Qcast

./: .gitignore  Cargo.toml  HANDOFF.md  README.md
.github/workflows/: ci.yml  release.yml
crates/qcast-core/: Cargo.toml
crates/qcast-core/src/: config.rs  elements.rs  lib.rs  mode.rs  signaling.rs  webrtc.rs
crates/qcast-receiver/: Cargo.toml
crates/qcast-receiver/src/: main.rs
crates/qcast-sender/: Cargo.toml
crates/qcast-sender/src/: access_code.rs  bundle.rs  capture.rs  gui.rs  host.rs  lib.rs  main.rs  mdns.rs  preflight.rs  tests_integration.rs  turn.rs
crates/qcast-sender/src/input/: event.rs  inject_file.rs  inject_other.rs  inject_windows.rs  key.rs  mod.rs
crates/qcast-sender/web/: client.js  index.html
crates/qcast-sender/web-client/: .gitignore  README.md  app.js  gstwebrtc-api-3.0.0.min.js  index.html  package-lock.json  package.json  vite.config.ts
crates/qcast-sender/web-client/_legacy/: app.js  index.html
crates/qcast-sender/web-client/src/: App.svelte  app.css
crates/qcast-sender/web-client/src/lib/: gstwebrtc-api.d.ts  ipc.ts  utils.ts
crates/qcast-sender/web-client/src/lib/components/: Layout.svelte  PairingCodeDisplay.svelte  SettingsDialog.svelte  StatusPill.svelte
crates/qcast-sender/web-client/src/routes/: ClientConnect.svelte  HostActive.svelte  HostPreflight.svelte  Launcher.svelte  Viewer.svelte
crates/qcast-server/: Cargo.toml
crates/qcast-server/src/: main.rs
deploy/: CI.md  PACKAGING.md  TEST_PLAN.md  UI_REWRITE.md  UPDATES.md  WINDOWS_INSTALLER.md  setup-linux.sh  setup-windows.ps1
deploy/appimage/: .gitignore  build-appimage.sh  qcast.desktop
deploy/coturn/: turnserver.conf
deploy/tauri/: README.md  build-windows.ps1  tauri.conf.json
deploy/vm/: README.md  create-windows-vm.sh  windows-setup.ps1
deploy/windows/: .gitignore  README.md  gather-payload.ps1  qcast.iss
src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  tray.rs  updater.rs
