[workspace]
resolver = "2"
members = [
    "crates/qcast-core",
    "crates/qcast-sender",
    "crates/qcast-receiver",
    "crates/qcast-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "local"

# Versions are a starting point; run `cargo update` / adjust after the first
# build once GStreamer dev headers are installed (see README).
[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-webrtc = "0.25"
gstreamer-sdp = "0.25"
qcast-core = { path = "crates/qcast-core" }
