[workspace]
resolver = "2"
members = [
    "crates/qcast-core",
    "crates/qcast-sender",
    "crates/qcast-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "local"

# Versions are a starting point; run `cargo update` / adjust after the first
# build once GStreamer dev headers are installed (see README).
[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
# async-io (not tokio) backend: makes zbus runtime-agnostic, so it works both
# under our capture `block_on` AND for other zbus users in the graph (eframe's
# AccessKit AT-SPI). The `tokio` backend forces a running tokio runtime on every
# zbus consumer and panics AccessKit's accessibility thread on startup.
ashpd = { version = "0.13", default-features = false, features = ["async-io", "screencast"] }
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-webrtc = "0.25"
gstreamer-sdp = "0.25"
# Typed parser for GstNavigation events (mouse/keyboard/scroll) delivered over
# webrtcsink's navigation data channel — the receiver→sender remote-control input
# path. v1_18 exposes the MouseScroll navigation variant (GStreamer 1.26 >> 1.18).
gstreamer-video = { version = "0.25", features = ["v1_18"] }
qcast-core = { path = "crates/qcast-core" }
