[package]
name = "qcast-sender"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
qcast-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gstreamer.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
